main.tf
# 1. Create a VPC
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
  enable_dns_hostnames = true
  tags = local.vpc_final_tags
}

# 2. Create an Internet Gateway (IGW)
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id #vpc association
  tags = local.igw_final_tags
}

# 3. Create a Public Subnet
resource "aws_subnet" "public" {
    count = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = local.az_names[count.index] # Specify an Availability Zone
  map_public_ip_on_launch = true         # Automatically assign public IPs to instances launched in this subnet

  tags = merge (
    local.common_tags,
    #roboshop-public-us-east-1a
  {
    Name = "${var.project}-public-${local.az_names[count.index]}"
  },
  var.public_subnet_tags
  )
}

# 3. Create a Private Subnet
resource "aws_subnet" "Private" {
    count = length(var.Private_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.Private_subnet_cidrs[count.index]
  availability_zone       = local.az_names[count.index] # Specify an Availability Zone
  
  tags = merge (
    local.common_tags,
    #roboshop-Private-us-east-1a
  {
    Name = "${var.project}-Private-${local.az_names[count.index]}"
  },
  var.Private_subnet_tags
  )
}
# 3. Create a database Subnet
resource "aws_subnet" "database" {
    count = length(var.database_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.database_subnet_cidrs[count.index]
  availability_zone       = local.az_names[count.index] # Specify an Availability Zone
  
  tags = merge (
    local.common_tags,
    #roboshop-database-us-east-1a
  {
    Name = "${var.project}-database-${local.az_names[count.index]}"
  },
  var.database_subnet_tags
  )
}
#route table creation without connecting routes
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

    tags = merge (
      local.common_tags,
      {
        Name = "${var.project}-${var.environment}-public" #roboshop-dev-public
      },
    var.public_route_table_tags
    )
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = merge(
        local.common_tags,
        # roboshop-dev-private
        {
            Name = "${var.project}-${var.environment}-private"
        },
        var.private_route_table_tags
  )
}

resource "aws_route_table" "database" {
  vpc_id = aws_vpc.main.id

  tags = merge(
        local.common_tags,
        # roboshop-dev-database
        {
            Name = "${var.project}-${var.environment}-database"
        },
        var.database_route_table_tags
  )
}
# adding route to the public route table
resource "aws_route" "public" {
  route_table_id              = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id      = aws_internet_gateway.main.id
}
# associating public route table with public subnets
resource "aws_route_table_association" "public" {
  count = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
    domain   = "vpc"
    tags = merge(
        local.common_tags,
        {
            Name = "${var.project}-${var.environment}-nat" #roboshop-dev-nat
        },
        var.eip_tags
  )
}
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id  # we are creating this in us-east-1a AZ

  tags = merge(
    local.common_tags,
    {
      Name = "${var.project}-${var.environment}"
    },
    var.nat_gateway_tags

  )

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.main]
}

# adding route to the private route table
resource "aws_route" "private" {
  route_table_id              = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
   nat_gateway_id = aws_nat_gateway.main.id
}
# associating private route table with public subnets
resource "aws_route_table_association" "private" {
  count = length(var.Private_subnet_cidrs)
  subnet_id      = aws_subnet.Private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route" "database" {
  route_table_id            = aws_route_table.database.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}

resource "aws_route_table_association" "database" {
  count = length(var.database_subnet_cidrs)
  subnet_id      = aws_subnet.database[count.index].id
  route_table_id = aws_route_table.database.id
}
